2011-12-15 Tomas Palacios <tomas.palacios@artica.es>

	* include/languages: Updated template, .po and .mo files.
	Updated template in Launchpad and completed
	Spanish and English translations.

2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_reporting.php: Projection graphs are static now.

2011-12-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_forecast.php: Changed the kind of graph 
	for projection to static

2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php
	operation/events/events.php: Added new option for display all 
	events in event viewer.

2011-12-15  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/setup.php: Fixed bad use of __() function

2011-12-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_events.php
	godmode/agentes/module_manager_editor_common.php
	godmode/agentes/module_manager.php: Some corrections over this 
	views.

2011-12-14  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/configure_alert_compound.php: Improved that actions
	can be removed in step 2. (Added delete button.)

2011-12-13  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  include/config_process.php,
	  install.php,
	  pandora_console.spec: Fixed version strings (were wrong
	  in the previous commit).

2011-12-13  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  include/config_process.php,
	  install.php,
	  pandora_console.spec: Updated version strings.

2011-12-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_users.php: Change the get user groups
	to return the groups orderer by name

2011-12-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fixed a bug of the
	NO DATA images in the pdf graph reports

	* include/styles/pandora.css