@@ -1,3 +1,9 @@
+2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* include/functions_forecast.php
+	include/functions_reporting.php: Added CSV functionality for 
+	projection and prediction reports.
+
 2011-12-15 Tomas Palacios <tomas.palacios@artica.es>
 
 	* include/languages: Updated template, .po and .mo files.
